:recycle: migrating to hws from gms

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,19 @@ apply plugin: 'kotlin-android'
 apply plugin: "org.jlleitschuh.gradle.ktlint"
 
 android {
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+  }
+  // For Kotlin projects
+  kotlinOptions {
+    jvmTarget = "1.8"
+  }
   compileSdkVersion 29
 
   defaultConfig {
     applicationId "com.schibsted.mappicker"
-    minSdkVersion 16
+    minSdkVersion 19
     //noinspection OldTargetApi
     targetSdkVersion 29
     versionCode 1
@@ -57,7 +65,10 @@ dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
   implementation 'androidx.multidex:multidex:2.0.1'
   implementation 'androidx.appcompat:appcompat:1.1.0'
-  implementation "com.google.android.gms:play-services-maps:17.0.0"
+  implementation 'com.huawei.hms:maps:4.0.1.300'
+  implementation 'com.google.android.material:material:1.0.0-rc01'
   implementation project(':leku')
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
+
+apply plugin: 'com.huawei.agconnect'
