--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
 	  url "https://novoda.bintray.com/snapshots"
     }
     jcenter()
+    maven {url 'http://developer.huawei.com/repo/'}
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:3.6.3'
@@ -23,6 +24,7 @@ buildscript {
     classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
     classpath 'com.ferranpons:twitter-gradle-plugin:1.1.0'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    classpath 'com.huawei.agconnect:agcp:1.2.1.301'
   }
 }
 
@@ -39,5 +41,6 @@ allprojects {
     }
     google()
     jcenter()
+    maven {url 'http://developer.huawei.com/repo/'}
   }
 }
