--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,11 @@ android {
     release {
       minifyEnabled true
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+      resValue "string", "api_key", "$System.env.API_KEY"
+    }
+
+    debug {
+      resValue "string", "api_key", "$System.env.API_KEY"
     }
   }
   compileOptions {
@@ -66,7 +71,7 @@ dependencies {
   implementation 'androidx.multidex:multidex:2.0.1'
   implementation 'androidx.appcompat:appcompat:1.1.0'
   implementation 'com.huawei.agconnect:agconnect-core:1.0.0.300'
-  implementation 'com.huawei.hms:maps:4.0.1.300'
+  implementation 'com.huawei.hms:maps:4.0.1.302'
   implementation 'com.google.android.material:material:1.0.0-rc01'
   implementation project(':leku')
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
