--- a/leku/build.gradle
+++ b/leku/build.gradle
@@ -88,14 +88,13 @@ configurations.all {
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
   implementation "androidx.appcompat:appcompat:1.1.0"
   implementation "com.google.android.material:material:1.2.0-alpha06"
 
   implementation ("com.huawei.hms:maps:4.0.1.301")
   implementation ("com.huawei.hms:location:4.0.4.300")
-  implementation ("com.google.android.libraries.places:places:2.3.0") {
-    exclude group: "com.android.support"
-  }
+  implementation 'com.huawei.hms:site:4.0.3.300'
 
   implementation "com.google.maps:google-maps-services:0.2.9"
 
