--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ buildscript {
 
 plugins {
   id "io.gitlab.arturbosch.detekt" version "1.0.0.RC7-3"
-  id "org.jlleitschuh.gradle.ktlint" version "9.2.1"
+  //id "org.jlleitschuh.gradle.ktlint" version "9.2.1"
 }
 
 allprojects {
