--- a/leku/build.gradle
+++ b/leku/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.bintray'
 apply plugin: 'twitter-gradle-plugin'
-apply plugin: "org.jlleitschuh.gradle.ktlint"
+//apply plugin: "org.jlleitschuh.gradle.ktlint"
 
 def versionMajor = getVersionMajor()
 def versionMinor = getVersionMinor()
@@ -71,12 +71,12 @@ detekt {
   }
 }
 
-ktlint {
+/*ktlint {
   reporters {
 	reporter "plain"
 	reporter "checkstyle"
   }
-}
+}*/
 
 configurations.all {
   // This is a workaround for the issue (remove when androidx exits alpha libraries):
