--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,9 +71,9 @@ dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
   implementation 'androidx.multidex:multidex:2.0.1'
   implementation 'androidx.appcompat:appcompat:1.1.0'
-  implementation 'com.huawei.agconnect:agconnect-core:1.0.0.300'
-  implementation 'com.huawei.hms:maps:4.0.1.301'
-  implementation 'com.google.android.material:material:1.0.0-rc01'
+  implementation 'com.huawei.agconnect:agconnect-core:1.3.2.301'
+  implementation 'com.huawei.hms:maps:5.0.0.300'
+  implementation 'com.google.android.material:material:1.3.0-alpha01'
   implementation project(':leku')
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
